2010-11-02  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/45629
	* io/io.h: Remove setjmp.h include.
	(st_parameter_dt): Change last_char to int, remove eof_jump.
	* io/list_read.c (next_char): Return EOF instead of jumping.
	(unget_char): Use int to be able to handle EOF.
	(eat_spaces): Handle EOF return from next_char.
	(eat_line): Likewise.
	(eat_separator): Handle EOF return from next_char, eat_spaces,
	eat_line.
	(finish_separator): Likewise.
	(convert_integer): Likewise.
	(read_logical): Likewise.
	(read_integer): Likewise.
	(read_character): Likewise.
	(parse_real): Likewise.
	(read_complex): Likewise.
	(read_real): Likewise.
	(list_formatted_read_scalar): Likewise.
	(list_formatted_read): Likewise.
	(finish_list_read): Likewise.
	(nml_parse_qualifier): Likewise.
	(nml_match_name): Likewise.
	(nml_get_obj_data): Likewise.
	(namelist_read): Likewise.
	* io/transfer.c (data_transfer_init): Initialize last_char.
	(finalize_transfer): Remove jmp_buf setup.

2010-10-26  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/46010
	* io/list_read.c (nml_parse_qualifier): Add additional conditions for
	setting the end index for loop specification. Fix some whitespace.
	* io/write.c (write_default_char4): Const-ify the source argument.

2010-10-21  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/46007
	* m4/shape.m4 (shape_'rtype_kind`):  Use variable for rank.
	Allocate return array if unallocated.
	* generated/shape_i4.c:  Regenerated.
	* generated/shape_i8.c:  Regenerated.
	* generated/shape_i16.c:  Regenerated.

2010-10-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/46079
	* runtime/stop.c (stop_numeric_f08): New function.
	(stop_numeric): Restore	to previous behavior.
	* gfortran.map: Add symbol _gfortran_stop_numeric_f08.

2010-10-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	* io/io.h: Remove definition of the BT enumerator.
	* libgfortran.h: Replace GFC_DTYPE enumerator with BT.
	* intrinsics/iso_c_generated_procs.c: Likewise